2010-06-12  Dawit Alemayehu  <adawit@kde.org>

Reviewed by Kenneth Rohde Christiansen.

        Added an attribute to enable/disable site specific quirks mode in WebKit.
        The attribute is enabled by default.

        https://bugs.webkit.org/show_bug.cgi?id=40073

        * Api/qwebsettings.cpp:
        (QWebSettingsPrivate::apply):
        (QWebSettings::QWebSettings):
        * Api/qwebsettings.h:

Canonical link: https://commits.webkit.org/52079@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61064 268f45cc-cd09-0410-ab3c-d52691b4dbfc